--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -10,6 +10,6 @@
     <title>Django Render</title>
   </head>
   <body>
-    <h1 class="center">How to deploy Django to Render</h1>
+    <h1 class="center">OTASUKEIJIBAN_DEPLOY_TEST BY TSUJIMURA</h1>
   </body>
 </html>
